--- a/spring-kafka-helloworld/src/test/resources/log4j.properties
+++ b/spring-kafka-helloworld/src/test/resources/log4j.properties
@@ -1,5 +1,6 @@
 log4j.rootLogger=INFO, console
 
+log4j.logger.muti.spring.kafka.helloworld.kafka=INFO
 log4j.logger.org.springframework.test.context=WARN
 log4j.logger.org.apache.kafka.clients.consumer=WARN
 log4j.logger.o.a.k.clients.consumer=WARN
